--- a/src/gnosefart/gnosefart.glade
+++ b/src/gnosefart/gnosefart.glade
@@ -1160,7 +1160,7 @@ If you find a bug or have a feature request, please write Matthew Strait at &lt;
       <child>
 	<widget class="GtkLabel" id="label14">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">The requested file wasn't found or it wasn't an NSF file.</property>
+	  <property name="label" translatable="yes">The requested file wasn't found, it wasn't an NSF file, or your installation is broken (check that the program "nosefart" is installed).</property>
 	  <property name="use_underline">False</property>
 	  <property name="use_markup">False</property>
 	  <property name="justify">GTK_JUSTIFY_LEFT</property>
